// Vitest Snapshot v1

exports[`Spinner > should render 1`] = `
<div>
  <div
    class="css-1pnprg"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a danger color 1`] = `
<div>
  <div
    class="css-1v3184r"
    color="danger"
  />
</div>
`;

exports[`Spinner > should render a hint color 1`] = `
<div>
  <div
    class="css-1de36oa"
    color="hint"
  />
</div>
`;

exports[`Spinner > should render a info color 1`] = `
<div>
  <div
    class="css-1pnprg"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a large one 1`] = `
<div>
  <div
    class="css-kioi9a"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a small one 1`] = `
<div>
  <div
    class="css-he4akl"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a success color 1`] = `
<div>
  <div
    class="css-bwy60j"
    color="success"
  />
</div>
`;

exports[`Spinner > should render a warning color 1`] = `
<div>
  <div
    class="css-txcakt"
    color="warning"
  />
</div>
`;
